# ai-data-factory

./: .env.example  .gitignore  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  platform_architecture.md  pyproject.toml  railway.api.json  railway.web.json
.claude/commands/: generate-dataset.md  generate-plan.md  generate-schema.md  implement.md
api/: config.py  db.py  main.py  opencode.json
api/models/: project.py
api/routers/: jobs.py  projects.py  runs.py
api/services/: file_service.py  jobs_service.py  llm_service.py  opencode_service.py  profile_service.py  runner_service.py  sse.py
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  entrypoint.sh
docs/: DATA_DRIVEN.md  RAILWAY.md
tools/: test_slash_command.sh
tools/templates/: strategy_data_driven.md  strategy_faker_llm.md  strategy_faker_pure.md  strategy_llm.md
web/: package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/projects/[id]/: page.tsx
web/app/projects/[id]/plan/: page.tsx
web/app/projects/[id]/runs/: page.tsx
web/app/projects/[id]/schema/: page.tsx
web/components/: ArtifactEditor.tsx  StatusBadge.tsx
web/hooks/: useProjectEvents.ts
web/lib/: api.ts
